[package]
name = "rhythms"
version = "0.1.0"
edition = "2018"
authors = ["Isis T. Baulig <grindcode@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/grindcode/rhythms"
description = "A rhythmic pattern generation library"
keywords = ["pattern", "music", "euclidean", "rhythm", "no_std"]
readme = "README.md"

[dependencies]
smallvec = "1.5"